tests/neg/param-lambda.stk
param indent: Int

fun line(text: String): Unit =
  var i = 0
  while i < indent do
    printChar ' '
    i <- i + 1
  println text

fun makeLinePrinter(): String => Unit =
  (text) => line text

fun main =
  val f = makeLinePrinter allow stdout // error
  f "hello, world!"
